  The feature id of the created feature is returned by updating the id of the
  passed in feature instead of through the return value of the method as
  was the case with the old SetFeature() method in MITAB 1.x.

- Added Visual Studio Project files in contrib/vcproj, contributed by 
  Tony Wells (bug 1877)

- Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes

- Fixed problem with corrupt pointer if file not found (bug 1899)

- Fixed tabdump build problem if DEBUG option not provided (bug 1898)

- Fixed deprecated warnings generated by mitab.h (bug 1907)

- Fixed multi-line text rendering (bug 1916) 

- Fixed multi-line text height problem (bug 1919)

- Fixed the text font size problem  (bug 1918)

- Add text outline color support (halo background in MapInfo) (bug 1921)

- Add font text styles support (bold, italic, etc.) (bug 1922)
 
Version 1.7.0-beta1 (2007-02-29)
--------------------------------

- Added support for V8.x large object types: large REGION, PLINE MULTIPLE,
  MULTIPOINT and COLLECTION (bug 1496)

- Added support for v9.x Time and DateTime fields (based on patch from
  AJD, bug 1754)

- Added bounds for Peruvian coordinate systems PSAD56 in mitab_bounds.cpp
  (came with patch from AJD sent for bug 1754)

- Use %.15g instead of %.16g as number precision in .MIF output

- Fixed the internal compressed coordinate range detection test to prevent
  possible overflow of the compressed integer coordinate values leading
  to some coordinate errors in very rare cases while writing to TAB (bug 1854) 


Version 1.6.4 (2007-12-10)
--------------------------

- Upgrade of OGR and CPL libs to the version from GDAL/OGR 1.4.3

- Fixed leak of SRS in OGRGeometry (bug 1816)

- Fix asDatumInfoList[] and asSpheroidInfoList[] defns/refs (bug 1826)

- Added reporting access mode to error message in TABINDFile::Open()
  (GDAL changeset r12460, ticket 1620)

- Fixed leaks in ITABFeature???::Set???FromStyleString() (GDAL ticket 1696)

