@@ -41,6 +41,8 @@ Version 2.0-dev (CVS)
 
 - Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes
 
+- Fixed const char * warnings with GCC 4.3 (GDAL ticket #2325)
+
 - Fixed problem with corrupt pointer if file not found (bug 1899)
 
 - Fixed tabdump build problem if DEBUG option not provided (bug 1898)
@@ -57,6 +59,7 @@ Version 2.0-dev (CVS)
 
 - Add font text styles support (bold, italic, etc.) (bug 1922)
  
+
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
 
@@ -918,5 +921,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.215 2008-07-21 14:09:41 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.216 2008-07-21 16:04:58 dmorissette Exp $
 ------------
